# pysonic

./: Justfile  LICENSE  README.md  __init__.py  pyproject.toml
src/pysonic/: __init__.py  fields.py  responses.py
tests/: .env  README.md  conftest.py  shared.py  test_endpoints.py  test_opensubsonic.py
